| Summary: | ASTERISK-26299: app_queue: Queue application sometimes stops calling members with Local interface | ||||
| Reporter: | Etienne Lessard (hexanol) | Labels: | |||
| Date Opened: | 2016-08-16 14:06:14 | Date Closed: | 2016-08-29 13:18:23 | ||
| Priority: | Major | Regression? | Yes | ||
| Status: | Closed/Complete | Components: | Applications/app_queue | ||
| Versions: | 13.10.0 | Frequency of Occurrence | Constant | ||
| Related Issues: |
| ||||
| Environment: | Debian 8.5 amd64 | Attachments: | ( 0) ASTERISK-26299.full.log | ||
| Description: | Hello,
Given I have two users, SIP/alice and SIP/bob Given I have the following extensions.conf: {noformat} [default] exten = 100,1,NoOp() same = n,Queue(foo) same = n,Hangup() [agents] exten = alice,1,NoOp() same = n,Wait(5) same = n,Dial(SIP/alice) same = n,Hangup() {noformat} And I have the following queues.conf: {noformat} [foo] strategy = rrmemory timeout = 30 ringinuse = 0 member => Local/alice@agents,0,Alice,SIP/alice {noformat} When Bob calls the queue "foo" And he hangs up its call after the Local channel is dialed by app_queue but *before* the Local channel calls SIP/alice (i.e. he hangs up while the Local channels is executing the Wait application) When Bob calls the queue "foo" once again Then the Local/alice member is never called And we see in the log: {noformat} DEBUG[6846][C-00000004]: app_queue.c:4447 ring_one: Trying 'Local/alice@agents' with metric 1000 DEBUG[6846][C-00000004]: app_queue.c:4232 can_ring_entry: Local/alice@agents has another call trying, can't receive call {noformat} In a more realistic scenario, the Wait application is replaced by an AGI application. This is a regression introduced in 13.10.0 with the fix for ASTERISK-16115. Thank you | ||||
| Comments: | By: Asterisk Team (asteriskteam) 2016-08-16 14:06:15.069-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Etienne Lessard (hexanol) 2016-08-16 14:08:44.165-0500 I've attached an example log of the described scenario. By: Rusty Newton (rnewton) 2016-08-16 19:05:57.931-0500 Thanks for the very thorough description and data! By: Joshua C. Colp (jcolp) 2016-08-29 06:49:07.943-0500 Ignore me, I'm just doing a test. ^_^ By: Filip Jenicek (phill) 2016-11-25 07:33:33.567-0600 I believe this issue is not fixed. Even with this change, our customer has experienced a similar issue on multiple installations. Unfortunately I don't have debug logs covering the moment it stopped working. When it failed, the debug log contained {code}[2016-11-18 12:28:47.186] {ast} asterisk[13358][app_queue.c:5295:is_our_turn]: There is 1 available member. [2016-11-18 12:28:47.186] {ast} asterisk[13358][app_queue.c:5310:is_our_turn]: It's our turn (SIP/i-31433213364-inbound-0000010f). [2016-11-18 12:28:47.186] {ast} asterisk[13358][app_queue.c:6567:try_calling]: SIP/i-31433213364-inbound-0000010f is trying to call a queue member. [2016-11-18 12:28:47.186] {ast} asterisk[13358][app_queue.c:4480:ring_one]: (Parallel) Trying 'Local/line-201@sip-locals-noanswer/n' with metric 0 [2016-11-18 12:28:47.186] {ast} asterisk[13358][app_queue.c:4271:can_ring_entry]: Local/line-201@sip-locals-noanswer/n has another call trying, can't receive call [2016-11-18 12:28:47.186] {ast} asterisk[13358][app_queue.c:4472:ring_one]: Nobody left to try ringing in queue [2016-11-18 12:28:47.186] {ast} asterisk[13358][app_queue.c:4802:wait_for_answer]: Everyone is busy at this time{code} Does anyone else have the same experience? By: ianplain (ianplain) 2016-12-29 04:24:46.665-0600 Hi Filip Are you still seeing this issue, we have seen something similar when upgrading from 11.20 to 11.25.1, where members who were local channels were not being called . if removed and readded the rang again , then when new member added stopped ringing, Had to rever to 11.20 as customer missing 50% of calls. We be building test system in new year to find out more. By: Friendly Automation (friendly-automation) 2017-01-29 15:36:50.149-0600 Change 4815 merged by George Joseph: app_queue: Ensure member is removed from pending when hanging up. [https://gerrit.asterisk.org/4815|https://gerrit.asterisk.org/4815] | ||||